@@ -1,6 +1,7 @@
 using System;
 using System.Collections.Generic;
 using System.IO;
+using JPEG.Huffman;
 
 namespace JPEG;
 
@@ -76,7 +77,7 @@ public class CompressedImage
 
 			sr.Read(buffer, 0, 4);
 			var decodeTableSize = BitConverter.ToInt32(buffer, 0);
-			result.DecodeTable = new Dictionary<BitsWithLength, byte>(decodeTableSize, new BitsWithLength.Comparer());
+			result.DecodeTable = new Dictionary<BitsWithLength, byte>(decodeTableSize);
 
 			for(int i = 0; i < decodeTableSize; i++)
 			{
