@@ -1,0 +1,3 @@
+﻿namespace JPEG.Huffman;
+
+public record struct BitsWithLength(int Bits, int BitsCount);
