@@ -1,0 +1,9 @@
+﻿namespace JPEG.Huffman;
+
+internal class HuffmanNode
+{
+    public byte? LeafLabel { get; set; }
+    public int Frequency { get; set; }
+    public HuffmanNode Left { get; set; }
+    public HuffmanNode Right { get; set; }
+}
