@@ -16,3 +16,9 @@ struct Pixel, Заранее подсчитать Alpha, Beta, Cosine
 |----------- |---------:|----------:|---------:|----------:|----------:|----------:|----------:|
 |   Compress | 363.8 ms | 195.79 ms | 10.73 ms | 1000.0000 | 1000.0000 | 1000.0000 |  37.51 MB |
 | Uncompress | 316.2 ms |  17.82 ms |  0.98 ms | 1000.0000 | 1000.0000 | 1000.0000 |  33.79 MB |
+
+Huffman Построение дерева
+|     Method |     Mean |    Error |  StdDev |      Gen0 |      Gen1 |      Gen2 | Allocated |
+|----------- |---------:|---------:|--------:|----------:|----------:|----------:|----------:|
+|   Compress | 228.4 ms | 10.37 ms | 0.57 ms |  333.3333 |  333.3333 |  333.3333 |  33.32 MB |
+| Uncompress | 309.2 ms | 12.00 ms | 0.66 ms | 1000.0000 | 1000.0000 | 1000.0000 |  33.79 MB |
